# avi2mp4

./: .gitignore  README.md  avi2mp4.bat  pyproject.toml
.docs/: PRD_avi2mp4.md
.github/workflows/: test.yml
avi2mp4/: __init__.py  batch.py  cli.py  converter.py  ui.py  utils.py
tests/: test_smoke.py
